<resources>
    <string name="app_name">Project Celia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="brew_goodmorning">Good Morning,</string>
    <string name="brew_roasttype">Roast Type</string>
    <string name="brew_roasttype_l">L</string>
    <string name="brew_roasttype_m">M</string>
    <string name="brew_roasttype_md">MD</string>
    <string name="brew_roasttype_d">D</string>
    <string name="brew_cupsize">Cup Size</string>
    <string name="brew_cupsize_small">8 oz</string>
    <string name="brew_cupsize_medium">16 oz</string>
    <string name="brew_cupsize_large">20 oz</string>
    <string name="brew_startbrewing">Start Brewing</string>
    <string name="history_clicktorate">Click to Rate!</string>
    <string name="history_brewinghistory">Brewing History</string>
    <string name="settings_heading">Settings</string>
    <string name="settings_account">Account</string>
    <string name="settings_editprofile">Edit Profile</string>
    <string name="settings_changepassword">Change Password</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_brewingstatus">Brewing Status</string>
    <string name="settings_maintenancereminder">Maintenance Reminders</string>
    <string name="settings_device">Device</string>
    <string name="settings_deviceinformation">Device Information</string>
    <string name="settings_helpandsupport">Help and Support</string>
    <string name="settings_frequentlyaskedquestions">Frequently Asked Questions</string>
    <string name="settings_contactsupport">Contact Support</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>