<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="24dp"
    android:background="@color/primary"
    tools:context=".SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/settings_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/onPrimary"
        android:layout_marginBottom="24dp"
        android:textStyle="bold"
        android:text="@string/settings_heading" />

<!--Account Heading-->
    <TextView
        android:id="@+id/account_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_heading"
        android:textSize="20sp"
        android:textColor="@color/onPrimary"
        android:textStyle="bold"
        android:text="@string/settings_account" />
<!--    Edit Profile-->
    <Button
        android:id="@+id/settings_editprofile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_heading"
        android:stateListAnimator="@null"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:backgroundTint="@color/primary"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawableTint="@color/onPrimary"
        android:drawablePadding="20dp"
        android:textSize="18sp"
        android:textColor="@color/onPrimary"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:letterSpacing="0"
        android:text="@string/settings_editprofile"/>

    <View
        android:id="@+id/settings_divide_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/settings_editprofile_button"
        android:background="@color/onPrimary" />

<!--    Change Password-->
    <Button
        android:id="@+id/settings_changepassword_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_divide_1"
        android:stateListAnimator="@null"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:backgroundTint="@color/primary"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawableTint="@color/onPrimary"
        android:drawablePadding="20dp"
        android:textSize="18sp"
        android:textColor="@color/onPrimary"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:letterSpacing="0"
        android:text="@string/settings_changepassword"/>

    <View
        android:id="@+id/settings_divide_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/settings_changepassword_button"
        android:background="@color/onPrimary" />

<!--Notifications Heading-->
    <TextView
        android:id="@+id/notifications_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_divide_2"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/onPrimary"
        android:textStyle="bold"
        android:text="@string/settings_notifications" />
<!--    Brewing Status-->
    <TextView
        android:id="@+id/settings_brewingstatus_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notifications_heading"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textColor="@color/onPrimary"
        android:text="@string/settings_brewingstatus" />
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settings_brewingstatus_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notifications_heading"
        android:layout_alignParentEnd="true"
        android:theme="@style/Theme.ProjectCelia.Switch"/>
    <View
        android:id="@+id/settings_divide_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/settings_brewingstatus_toggle"
        android:background="@color/onPrimary" />

<!--    Maintenance Reminders-->
    <TextView
        android:id="@+id/settings_maintenance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_divide_3"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textColor="@color/onPrimary"
        android:text="@string/settings_maintenancereminder" />
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settings_maintenance_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_brewingstatus_toggle"
        android:layout_alignParentEnd="true"
        android:theme="@style/Theme.ProjectCelia.Switch"/>
    <View
        android:id="@+id/settings_divide_4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/settings_maintenance_toggle"
        android:background="@color/onPrimary" />

<!--Device Heading-->
    <TextView
        android:id="@+id/device_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_divide_4"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/onPrimary"
        android:textStyle="bold"
        android:text="@string/settings_device" />
<!--    Device Information-->
    <Button
        android:id="@+id/settings_deviceinfo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/device_heading"
        android:stateListAnimator="@null"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:backgroundTint="@color/primary"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawableTint="@color/onPrimary"
        android:drawablePadding="20dp"
        android:textSize="18sp"
        android:textColor="@color/onPrimary"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:letterSpacing="0"
        android:text="@string/settings_deviceinformation"/>

    <View
        android:id="@+id/settings_divide_5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/settings_deviceinfo_button"
        android:background="@color/onPrimary" />

<!--Help and Support Heading-->
    <TextView
        android:id="@+id/help_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_divide_5"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/onPrimary"
        android:textStyle="bold"
        android:text="@string/settings_helpandsupport" />
<!--    FAQ-->
    <Button
        android:id="@+id/settings_faq_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/help_heading"
        android:stateListAnimator="@null"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:backgroundTint="@color/primary"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawableTint="@color/onPrimary"
        android:drawablePadding="20dp"
        android:textSize="18sp"
        android:textColor="@color/onPrimary"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:letterSpacing="0"
        android:text="@string/settings_frequentlyaskedquestions"/>

    <View
        android:id="@+id/settings_divide_7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/settings_faq_button"
        android:background="@color/onPrimary" />
<!--    Contact Support-->
    <Button
        android:id="@+id/settings_contact_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_divide_7"
        android:stateListAnimator="@null"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:backgroundTint="@color/primary"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawableTint="@color/onPrimary"
        android:drawablePadding="20dp"
        android:textSize="18sp"
        android:textColor="@color/onPrimary"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:letterSpacing="0"
        android:text="@string/settings_contactsupport"/>

    <View
        android:id="@+id/settings_divide_8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/settings_contact_button"
        android:background="@color/onPrimary" />

</RelativeLayout>