<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="56dp"
    android:background="@color/primary"
    android:fontFamily="sans-serif-light"
    tools:context=".BrewFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/onPrimary"
        android:text="@string/brew_goodmorning" />

    <TextView
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading"
        android:textColor="@color/onPrimary"
        android:text="{firstName}"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/coffeecup"
        android:layout_width="96dp"
        android:layout_height="75dp"
        android:layout_below="@id/firstname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:elevation="10dp"
        android:src="@drawable/coffeecup_white" />

    <TextView
        android:id="@+id/heading_roasttype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/coffeecup"
        android:textSize="18sp"
        android:textColor="@color/onPrimary"
        android:text="@string/brew_roasttype"
        />

    <LinearLayout
        android:id="@+id/roast_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading_roasttype"
        android:layout_centerHorizontal="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_roast_light"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:backgroundTint="@drawable/brew_buttons_background"
            android:padding="0dp"
            android:text="@string/brew_roasttype_l"
            android:letterSpacing="0"
            android:textSize="16sp"
            android:textColor="@drawable/brew_buttons_text"
            app:cornerRadius="16dp"
            app:strokeColor="@color/secondary"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_roast_medium"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/button_roast_light"
            android:backgroundTint="@drawable/brew_buttons_background"
            android:padding="0dp"
            android:elevation="30dp"
            android:text="@string/brew_roasttype_m"
            android:letterSpacing="0"
            android:textSize="16sp"
            android:textColor="@drawable/brew_buttons_text"
            app:cornerRadius="16dp"
            app:strokeColor="@color/secondary"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_roast_mediumdark"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/button_roast_medium"
            android:backgroundTint="@drawable/brew_buttons_background"
            android:padding="0dp"
            android:elevation="30dp"
            android:text="@string/brew_roasttype_md"
            android:letterSpacing="0"
            android:textSize="16sp"
            android:textColor="@drawable/brew_buttons_text"
            app:cornerRadius="16dp"
            app:strokeColor="@color/secondary"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_roast_dark"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/button_roast_mediumdark"
            android:backgroundTint="@drawable/brew_buttons_background"
            android:padding="0dp"
            android:elevation="100dp"
            android:text="@string/brew_roasttype_d"
            android:letterSpacing="0"
            android:textSize="16sp"
            android:textColor="@drawable/brew_buttons_text"
            app:cornerRadius="16dp"
            app:strokeColor="@color/secondary"
            app:strokeWidth="1dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/heading_beantype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/roast_buttons"
        android:textSize="18sp"
        android:textColor="@color/onPrimary"
        android:text="Bean Type" />

    <RelativeLayout
        android:id="@+id/beantype_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading_beantype"
        android:layout_centerHorizontal="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_beantype_arabica"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:backgroundTint="@drawable/brew_buttons_background"
            android:padding="0dp"
            android:elevation="30dp"
            android:text="Arabica"
            android:letterSpacing="0"
            android:textSize="10sp"
            android:textColor="@drawable/brew_buttons_text"
            app:cornerRadius="16dp"
            app:strokeColor="@color/secondary"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_beantype_robusta"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/button_beantype_arabica"
            android:backgroundTint="@drawable/brew_buttons_background"
            android:padding="0dp"
            android:elevation="30dp"
            android:text="Robusta"
            android:letterSpacing="0"
            android:textSize="10sp"
            android:textColor="@drawable/brew_buttons_text"
            app:cornerRadius="16dp"
            app:strokeColor="@color/secondary"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_beantype_liberica"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/button_beantype_robusta"
            android:backgroundTint="@drawable/brew_buttons_background"
            android:padding="0dp"
            android:elevation="30dp"
            android:text="Liberica"
            android:letterSpacing="0"
            android:textSize="10sp"
            android:textColor="@drawable/brew_buttons_text"
            app:cornerRadius="16dp"
            app:strokeColor="@color/secondary"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_beantype_excelsa"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/button_beantype_liberica"
            android:backgroundTint="@drawable/brew_buttons_background"
            android:padding="0dp"
            android:elevation="30dp"
            android:text="Excelsa"
            android:letterSpacing="0"
            android:textSize="10sp"
            android:textColor="@drawable/brew_buttons_text"
            app:cornerRadius="16dp"
            app:strokeColor="@color/secondary"
            app:strokeWidth="1dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/heading_cupsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/beantype_buttons"
        android:textSize="18sp"
        android:textColor="@color/onPrimary"
        android:text="@string/brew_cupsize" />

    <RelativeLayout
        android:id="@+id/cupsize_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading_cupsize"
        android:layout_centerHorizontal="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cupsize_8oz"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:backgroundTint="@drawable/brew_buttons_background"
            android:padding="0dp"
            android:elevation="30dp"
            android:text="@string/brew_cupsize_small"
            android:letterSpacing="0"
            android:textSize="18sp"
            android:textColor="@drawable/brew_buttons_text"
            app:cornerRadius="16dp"
            app:strokeColor="@color/secondary"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cupsize_16oz"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/button_cupsize_8oz"
            android:backgroundTint="@drawable/brew_buttons_background"
            android:padding="0dp"
            android:elevation="30dp"
            android:text="@string/brew_cupsize_medium"
            android:letterSpacing="0"
            android:textSize="18sp"
            android:textColor="@drawable/brew_buttons_text"
            app:cornerRadius="16dp"
            app:strokeColor="@color/secondary"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cupsize_20oz"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/button_cupsize_16oz"
            android:backgroundTint="@drawable/brew_buttons_background"
            android:padding="0dp"
            android:elevation="30dp"
            android:text="@string/brew_cupsize_large"
            android:letterSpacing="0"
            android:textSize="18sp"
            android:textColor="@drawable/brew_buttons_text"
            app:cornerRadius="16dp"
            app:strokeColor="@color/secondary"
            app:strokeWidth="1dp" />

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_startbrew"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/cupsize_buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/secondary"
        android:elevation="30dp"
        android:padding="0dp"
        android:text="@string/brew_startbrewing"
        android:letterSpacing="0"
        android:textColor="@color/onSecondary"
        android:textSize="18sp"
        app:cornerRadius="32dp"
        app:strokeColor="@color/secondary"
        app:strokeWidth="2dp" />


</RelativeLayout>